[#29] fix : comment 수정